update pages and api new
